overflow-x hidden fixed responsive issue. Delete media queries from about section

--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,7 @@
     padding: 0;
     font-family: 'Poppins', sans-serif;
   }
-  
+
+  body {
+    overflow-x: hidden;
+  }
